change output method

--- a/boxCount2graph.ipynb
+++ b/boxCount2graph.ipynb
@@ -25,7 +25,9 @@
     "from openpyxl.drawing.text import Paragraph, ParagraphProperties, CharacterProperties, RichTextProperties, Font\n",
     "from openpyxl.chart.text import RichText\n",
     "from openpyxl.utils.units import pixels_to_EMU\n",
-    "import os"
+    "import os\n",
+    "from pathlib import Path\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -43,8 +45,6 @@
    "source": [
     "wb = Workbook()\n",
     "ws = wb.active\n",
-    "# 読み込むcsvリスト.凡例に使う分類ごとにパスを適宜変えること.\n",
-    "path_list1 = natsorted(glob.glob(\"**/open_noses/cough/t20/theta_0phi_5/1e5_re/*.csv\"))\n",
     "# 凡例に使うリスト\n",
     "# 距離比較\n",
     "path_list2 = natsorted(glob.glob(\"x*\"))\n",
@@ -61,7 +61,7 @@
     "\n",
     "# 口呼吸or鼻呼吸比較\n",
     "path_list5 = []\n",
-    "for f in natsorted(glob.glob('x500/o*')):\n",
+    "for f in natsorted(glob.glob('x500/co*')):\n",
     "    path_list5.append(os.path.split(f)[1])\n",
     "\n",
     "#首角度比較\n",
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`csv`データ抽出,グラフ用データ追記"
+    "読み込む`csv`リスト,分類に使うリストをここに保存.(ここのみ編集する)"
    ]
   },
   {
@@ -88,7 +88,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index in range(0,3):\n",
+    "path_list1 = natsorted(glob.glob(\"x1000/open_noses/cough/t20/theta_*phi_*/*.csv\"))\n",
+    "series_list = path_list6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`csv`データ抽出,グラフ用データ追記"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if series_list == path_list2:\n",
+    "    num_dataset = 3\n",
+    "elif series_list == path_list6:\n",
+    "    num_dataset = 5\n",
+    "\n",
+    "for index in range(0,num_dataset):\n",
     "    df = pd.read_csv(path_list1[index])\n",
     "    df[\"volume[*1e-9ml]\"] = df[\"volume[ml]\"]*1e9\n",
     "    Data = df[[\"num_drop\",\"volume[*1e-9ml]\"]]\n",
@@ -124,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,13 +155,13 @@
     "\n",
     "c1.y_axis.title = \"number of droplets\"\n",
     "c1.x_axis.title = \"Airway site\"\n",
-    "c1_data_row_min_list = [2,8,14]\n",
-    "c1_data_row_max_list = [6,12,18]\n",
-    "for index in range(0,3):\n",
+    "c1_data_row_min_list = [2,8,14,20,26]\n",
+    "c1_data_row_max_list = [6,12,18,24,30]\n",
+    "for index in range(0,num_dataset):\n",
     "    data = Reference(ws,min_col = 2,max_col=2, min_row=c1_data_row_min_list[index],max_row=c1_data_row_max_list[index])\n",
     "    \n",
     "    category = Reference(ws, min_col = 1, max_col=1, min_row=2, max_row= 6)\n",
-    "    series = Series(data, title=path_list2[index])\n",
+    "    series = Series(data, title=series_list[index])\n",
     "    c1.append(series)\n",
     "    c1.set_categories(category)"
    ]
@@ -153,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +210,27 @@
     "ser3.graphicalProperties.line.solidFill = '0000FF'\n",
     "ser3.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
     "\n",
+    "if num_dataset == 5:\n",
+    "    # #ser4\n",
+    "    ser4=c1.series[3]\n",
+    "\n",
+    "    ser4.marker.symbol = 'circle'\n",
+    "    ser4.marker.size = 8\n",
+    "    ser4.marker.graphicalProperties.solidFill = '000000'       \n",
+    "    ser4.marker.graphicalProperties.line.solidFill = '000000'\n",
+    "    ser4.graphicalProperties.line.solidFill = '000000'\n",
+    "    ser4.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
+    "    # #ser5\n",
+    "    ser5=c1.series[4]\n",
+    "\n",
+    "    ser5.marker.symbol = 'diamond'\n",
+    "    ser5.marker.size = 8\n",
+    "    ser5.marker.graphicalProperties.solidFill = '00FF00'       \n",
+    "    ser5.marker.graphicalProperties.line.solidFill = '00FF00'\n",
+    "    ser5.graphicalProperties.line.solidFill = '00FF00'\n",
+    "    ser5.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
     "#axis\n",
     "c1.x_axis.majorTickMark = \"in\"\n",
     "c1.y_axis.majorTickMark = \"in\"\n",
@@ -201,7 +244,7 @@
     "#font\n",
     "font = Font(typeface='Times New Roman')\n",
     "size = 1000 # 10 point size\n",
-    "char_prop = CharacterProperties(latin=font, sz=size, b=True, solidFill=\"000000\") #\n",
+    "char_prop = CharacterProperties(latin=font, sz=size, b=True, solidFill=\"000000\")\n",
     "para_prop = ParagraphProperties(defRPr=char_prop)\n",
     "c1.x_axis.title.tx.rich.p[0].pPr = para_prop\n",
     "c1.y_axis.title.tx.rich.p[0].pPr = para_prop\n",
@@ -223,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,14 +276,14 @@
     "c2.y_axis.title = \"volume [*1e-9]\"\n",
     "c2.x_axis.title = \"Airway site\"\n",
     "\n",
-    "c2_data_row_min_list = [2,8,14]\n",
-    "c2_data_row_max_list = [6,12,18]\n",
-    "for index in range(0,3):\n",
+    "c2_data_row_min_list = [2,8,14,20,26]\n",
+    "c2_data_row_max_list = [6,12,18,24,30]\n",
+    "for index in range(0,num_dataset):\n",
     "    data = Reference(ws,min_col = 3,max_col=3, min_row=c2_data_row_min_list[index],max_row=c2_data_row_max_list[index])\n",
     "\n",
     "    category = Reference(ws, min_col = 1, max_col=1, min_row=2, max_row= 6)\n",
     "\n",
-    "    series = Series(data, title=path_list2[index])\n",
+    "    series = Series(data, title=series_list[index])\n",
     "    c2.append(series)\n",
     "    c2.set_categories(category)"
    ]
@@ -254,40 +297,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#option\n",
-    "#ser4\n",
-    "ser4=c2.series[0]\n",
+    "#ser6\n",
+    "ser6=c2.series[0]\n",
     "\n",
-    "ser4.marker.symbol = 'circle'\n",
-    "ser4.marker.size = 8\n",
-    "ser4.marker.graphicalProperties.solidFill = 'FF0000'\n",
-    "ser4.marker.graphicalProperties.line.solidFill = 'FF0000'\n",
-    "ser4.graphicalProperties.line.solidFill = 'FF0000'\n",
-    "ser4.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
-    "\n",
-    "#ser5\n",
-    "ser5=c2.series[1]\n",
-    "\n",
-    "ser5.marker.symbol = 'diamond'\n",
-    "ser5.marker.size = 8\n",
-    "ser5.marker.graphicalProperties.solidFill = '008000'\n",
-    "ser5.marker.graphicalProperties.line.solidFill = '008000'\n",
-    "ser5.graphicalProperties.line.solidFill = '008000'\n",
-    "ser5.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
-    "\n",
-    "# #ser6\n",
-    "ser6=c2.series[2]\n",
-    "\n",
-    "ser6.marker.symbol = 'square'\n",
+    "ser6.marker.symbol = 'circle'\n",
     "ser6.marker.size = 8\n",
-    "ser6.marker.graphicalProperties.solidFill = '0000FF'\n",
-    "ser6.marker.graphicalProperties.line.solidFill = '0000FF'\n",
-    "ser6.graphicalProperties.line.solidFill = '0000FF'\n",
+    "ser6.marker.graphicalProperties.solidFill = 'FF0000'\n",
+    "ser6.marker.graphicalProperties.line.solidFill = 'FF0000'\n",
+    "ser6.graphicalProperties.line.solidFill = 'FF0000'\n",
     "ser6.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
+    "#ser7\n",
+    "ser7=c2.series[1]\n",
+    "\n",
+    "ser7.marker.symbol = 'diamond'\n",
+    "ser7.marker.size = 8\n",
+    "ser7.marker.graphicalProperties.solidFill = '008000'\n",
+    "ser7.marker.graphicalProperties.line.solidFill = '008000'\n",
+    "ser7.graphicalProperties.line.solidFill = '008000'\n",
+    "ser7.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
+    "# #ser8\n",
+    "ser8=c2.series[2]\n",
+    "\n",
+    "ser8.marker.symbol = 'square'\n",
+    "ser8.marker.size = 8\n",
+    "ser8.marker.graphicalProperties.solidFill = '0000FF'\n",
+    "ser8.marker.graphicalProperties.line.solidFill = '0000FF'\n",
+    "ser8.graphicalProperties.line.solidFill = '0000FF'\n",
+    "ser8.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
+    "if num_dataset == 5:\n",
+    "    # #ser9\n",
+    "    ser9=c2.series[3]\n",
+    "\n",
+    "    ser9.marker.symbol = 'circle'\n",
+    "    ser9.marker.size = 8\n",
+    "    ser9.marker.graphicalProperties.solidFill = '000000'       \n",
+    "    ser9.marker.graphicalProperties.line.solidFill = '000000'\n",
+    "    ser9.graphicalProperties.line.solidFill = '000000'\n",
+    "    ser9.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
+    "\n",
+    "    # #ser10\n",
+    "    ser10=c2.series[4]\n",
+    "\n",
+    "    ser10.marker.symbol = 'diamond'\n",
+    "    ser10.marker.size = 8\n",
+    "    ser10.marker.graphicalProperties.solidFill = '00FF00'       \n",
+    "    ser10.marker.graphicalProperties.line.solidFill = '00FF00'\n",
+    "    ser10.graphicalProperties.line.solidFill = '00FF00'\n",
+    "    ser10.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
     "\n",
     "c2.x_axis.majorTickMark = \"in\"\n",
     "c2.y_axis.majorTickMark = \"in\"\n",
@@ -318,19 +382,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "`result`内に保存用ディレクトリを作る.(初回のみ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "directory \"distance\" exists.\n",
+      "directory \"angle\" exists.\n"
+     ]
+    }
+   ],
+   "source": [
+    "directory_1 = 'result/distance'\n",
+    "directory_2 = 'result/angle'\n",
+    "\n",
+    "if not os.path.exists(directory_1):\n",
+    "    os.makedirs(directory_1)\n",
+    "    print('Directory \"distance\" has been created')\n",
+    "else:\n",
+    "    print('directory \"distance\" exists.')\n",
+    "\n",
+    "if not os.path.exists(directory_2):\n",
+    "    os.makedirs(directory_2)\n",
+    "    print('Directory \"angle\" has been created')\n",
+    "else:\n",
+    "    print('directory \"angle\" exists.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Chart1,Chart2,`xlsx`ファイル出力設定"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x1000_20241002.xlsx was generated.\n"
+     ]
+    }
+   ],
    "source": [
-    "ws.add_chart(c1, \"B22\")\n",
-    "ws.add_chart(c2,\"K22\")\n",
-    "# 出力結果ファイル名指定.かぶりを防ぐためケースごとに名前を変更すること.\n",
-    "wb.save(\"./result/BoxCountResult_noses_cough_x500-1000_phi0_5_1e5_re.xlsx\")"
+    "ws.add_chart(c1, \"E22\")\n",
+    "ws.add_chart(c2,\"N22\")\n",
+    "# 命名規則,保存ディレクトリの指定\n",
+    "today = datetime.now()\n",
+    "date_string = today.strftime(\"%Y%m%d\")\n",
+    "Read_file_path = Path(path_list1[0])\n",
+    "if series_list == path_list2:\n",
+    "    filename = Read_file_path.parent.name + \"_\" + date_string + \".xlsx\"\n",
+    "    resultfilepath = Path(\"./result/distance/\" + filename)\n",
+    "elif series_list == path_list6:\n",
+    "    filename = Read_file_path.parts[0] + \"_\" + date_string + \".xlsx\"\n",
+    "    resultfilepath = Path(\"./result/angle/\" + filename)\n",
+    "\n",
+    "wb.save(resultfilepath)\n",
+    "print(filename + \" was generated.\")"
    ]
   },
   {
@@ -342,18 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['x500\\\\open_noses\\\\cough\\\\t20\\\\theta_0phi_5\\\\1e5\\\\BoxCount.csv',\n",
-       " 'x750\\\\open_noses\\\\cough\\\\t20\\\\theta_0phi_5\\\\1e5\\\\BoxCount.csv',\n",
-       " 'x1000\\\\open_noses\\\\cough\\\\t20\\\\theta_0phi_5\\\\1e5\\\\BoxCount.csv']"
+       "['x500/open_noses/cough/t20\\\\theta_0phi_0\\\\BoxCount.csv',\n",
+       " 'x500/open_noses/cough/t20\\\\theta_0phi_5\\\\BoxCount.csv',\n",
+       " 'x500/open_noses/cough/t20\\\\theta_0phi_10\\\\BoxCount.csv',\n",
+       " 'x500/open_noses/cough/t20\\\\theta_0phi_-5\\\\BoxCount.csv',\n",
+       " 'x500/open_noses/cough/t20\\\\theta_0phi_-10\\\\BoxCount.csv']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,22 +484,26 @@
    "source": [
     "import glob\n",
     "from natsort import natsorted\n",
-    "path_list1 = natsorted(glob.glob(\"**/open_noses/cough/t20/theta_0phi_5/1e5/*.csv\"))\n",
+    "path_list1 = natsorted(glob.glob(\"x500/open_noses/cough/t20/theta_*phi_*/*.csv\"))\n",
     "path_list1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['theta_0phi_0', 'theta_0phi_5', 'theta_0phi_-5']"
+       "['theta_0phi_0',\n",
+       " 'theta_0phi_5',\n",
+       " 'theta_0phi_10',\n",
+       " 'theta_0phi_-5',\n",
+       " 'theta_0phi_-10']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,6 +514,7 @@
     "path_list6 = []\n",
     "for f in natsorted(glob.glob('x500/open_noses/cough/**/theta_*phi_*')):\n",
     "    path_list6.append(os.path.split(f)[1])\n",
+    "\n",
     "path_list6"
    ]
   }
