--- a/boxCount2graph.ipynb
+++ b/boxCount2graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,8 @@
     "from openpyxl.utils.units import pixels_to_EMU\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import win32com.client"
    ]
   },
   {
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,12 +85,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_list1 = natsorted(glob.glob(\"x1000/open_noses/cough/t20/theta_*phi_*/*.csv\"))\n",
-    "series_list = path_list6"
+    "path_list1 = natsorted(glob.glob(\"**/open_noses/cough/t20/theta_0phi_-10/*.csv\"))\n",
+    "series_list = path_list2"
    ]
   },
   {
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,8 +113,8 @@
     "\n",
     "for index in range(0,num_dataset):\n",
     "    df = pd.read_csv(path_list1[index])\n",
-    "    df[\"volume[*1e-9ml]\"] = df[\"volume[ml]\"]*1e9\n",
-    "    Data = df[[\"num_drop\",\"volume[*1e-9ml]\"]]\n",
+    "    df[\"volume[×1e-9ml]\"] = df[\"volume[ml]\"]*1e9\n",
+    "    Data = df[[\"num_drop\",\"volume[×1e-9ml]\"]]\n",
     "    \n",
     "    #ここまでデータの抽出\n",
     "    ID = []\n",
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,12 +184,12 @@
     "#ser1\n",
     "ser1=c1.series[0]\n",
     "\n",
-    "ser1.marker.symbol = 'circle'     # マーカーの形状(円)を選択\n",
-    "ser1.marker.size = 8              # マーカーの大きさを設定(整数)\n",
-    "ser1.marker.graphicalProperties.solidFill = 'FF0000' # マーカーの塗り潰し色を設定\n",
+    "ser1.marker.symbol = 'circle'\n",
+    "ser1.marker.size = 8\n",
+    "ser1.marker.graphicalProperties.solidFill = 'FF0000'\n",
     "ser1.marker.graphicalProperties.line.solidFill = 'FF0000'\n",
-    "ser1.graphicalProperties.line.solidFill = 'FF0000' # 線の色を設定する\n",
-    "ser1.graphicalProperties.line.width = pixels_to_EMU(1.0) # マーカーの太さ\n",
+    "ser1.graphicalProperties.line.solidFill = 'FF0000'\n",
+    "ser1.graphicalProperties.line.width = pixels_to_EMU(1.0)\n",
     "\n",
     "#ser2\n",
     "ser2=c1.series[1]\n",
@@ -236,6 +237,7 @@
     "c1.y_axis.majorTickMark = \"in\"\n",
     "c1.y_axis.majorGridlines = None\n",
     "c1.x_axis.majorGridlines = None\n",
+    "c1.y_axis.min = 0\n",
     "c1.graphical_properties = GraphicalProperties(ln=LineProperties(noFill=True))\n",
     "c1.plot_area.spPr = GraphicalProperties(ln = LineProperties(solidFill = \"000000\"))\n",
     "c1.x_axis.spPr = GraphicalProperties(ln =LineProperties(solidFill=\"000000\"))\n",
@@ -249,7 +251,7 @@
     "c1.x_axis.title.tx.rich.p[0].pPr = para_prop\n",
     "c1.y_axis.title.tx.rich.p[0].pPr = para_prop\n",
     "\n",
-    "char_prop = CharacterProperties(latin=font, sz=size, b=False) # b=Trueでボールドにする\n",
+    "char_prop = CharacterProperties(latin=font, sz=size, b=False)\n",
     "para_prop = ParagraphProperties(defRPr=char_prop)\n",
     "rich_text = RichText(p=[Paragraph(pPr=para_prop, endParaRPr=char_prop)])\n",
     "c1.legend.txPr = rich_text\n",
@@ -266,14 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "#c2\n",
     "c2 = LineChart()\n",
     "\n",
-    "c2.y_axis.title = \"volume [*1e-9]\"\n",
+    "c2.y_axis.title = \"volume [×1e-9]\"\n",
     "c2.x_axis.title = \"Airway site\"\n",
     "\n",
     "c2_data_row_min_list = [2,8,14,20,26]\n",
@@ -297,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,6 +359,7 @@
     "c2.y_axis.majorTickMark = \"in\"\n",
     "c2.y_axis.majorGridlines = None\n",
     "c2.x_axis.majorGridlines = None\n",
+    "c2.y_axis.min = 0\n",
     "c2.graphical_properties = GraphicalProperties(ln=LineProperties(noFill=True))\n",
     "c2.plot_area.spPr = GraphicalProperties(ln = LineProperties(solidFill = \"000000\"))\n",
     "c2.x_axis.spPr = GraphicalProperties(ln =LineProperties(solidFill=\"000000\"))\n",
@@ -365,12 +368,12 @@
     "#font\n",
     "font = Font(typeface='Times New Roman')\n",
     "size = 1000 # 10 point size\n",
-    "char_prop = CharacterProperties(latin=font, sz=size, b=True, solidFill=\"000000\") #\n",
+    "char_prop = CharacterProperties(latin=font, sz=size, b=True, solidFill=\"000000\")\n",
     "para_prop = ParagraphProperties(defRPr=char_prop)\n",
     "c2.x_axis.title.tx.rich.p[0].pPr = para_prop\n",
     "c2.y_axis.title.tx.rich.p[0].pPr = para_prop\n",
     "\n",
-    "char_prop = CharacterProperties(latin=font, sz=size, b=False) # b=Trueでボールドにする\n",
+    "char_prop = CharacterProperties(latin=font, sz=size, b=False)\n",
     "para_prop = ParagraphProperties(defRPr=char_prop)\n",
     "rich_text = RichText(p=[Paragraph(pPr=para_prop, endParaRPr=char_prop)])\n",
     "c2.legend.txPr = rich_text\n",
@@ -387,9 +390,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "directory \"distance\" exists.\n",
+      "directory \"angle\" exists.\n"
+     ]
+    }
+   ],
    "source": [
     "directory_1 = 'result/distance'\n",
     "directory_2 = 'result/angle'\n",
@@ -416,9 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta_0phi_-10_20241003.xlsx was generated.\n"
+     ]
+    }
+   ],
    "source": [
     "ws.add_chart(c1, \"E22\")\n",
     "ws.add_chart(c2,\"N22\")\n",
@@ -435,6 +455,44 @@
     "\n",
     "wb.save(resultfilepath)\n",
     "print(filename + \" was generated.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "グラフ画像保存(excelからグラフを抽出して,画像として保存)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "excel = win32com.client.Dispatch(\"Excel.Application\")\n",
+    "excel.Visible = False\n",
+    "\n",
+    "filepath = r\"C:/Users/b1123/document/Lab/Program/droplets_simulation/BoxCount_ICCS2025/\" + str(resultfilepath)\n",
+    "workbook = excel.Workbooks.Open(filepath)\n",
+    "sheet = workbook.Sheets(1)\n",
+    "\n",
+    "chart1 = sheet.ChartObjects(1).Chart\n",
+    "chart2 = sheet.ChartObjects(2).Chart\n",
+    "\n",
+    "if series_list == path_list2:\n",
+    "    imagename_number = Read_file_path.parent.name + \"_\" + date_string + \"_number\" + \".png\"\n",
+    "    imagename_volume = Read_file_path.parent.name + \"_\" + date_string + \"_volume\" + \".png\"\n",
+    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/\" + imagename_number, \"PNG\")\n",
+    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/\" + imagename_volume, \"PNG\")\n",
+    "elif series_list == path_list6:\n",
+    "    imagename_number = Read_file_path.parts[0] + \"_\" + date_string + \"_number\" + \".png\"\n",
+    "    imagename_volume = Read_file_path.parts[0] + \"_\" + date_string + \"_volume\" + \".png\"\n",
+    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/\" + imagename_number, \"PNG\")\n",
+    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/\" + imagename_volume, \"PNG\")\n",
+    "\n",
+    "workbook.Close(SaveChanges=False)\n",
+    "excel.Quit()"
    ]
   }
  ],
