add layout option

--- a/boxCount2graph.ipynb
+++ b/boxCount2graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,8 @@
     "from openpyxl.drawing.text import Paragraph, ParagraphProperties, CharacterProperties, RichTextProperties, Font\n",
     "from openpyxl.chart.text import RichText\n",
     "from openpyxl.utils.units import pixels_to_EMU\n",
+    "from openpyxl.chart.legend import Legend\n",
+    "from openpyxl.chart.layout import Layout, ManualLayout\n",
     "import os\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,8 @@
     "ws = wb.active\n",
     "# 凡例に使うリスト\n",
     "# 距離比較\n",
-    "path_list2 = natsorted(glob.glob(\"x*\"))\n",
+    "path_list2_origin = natsorted(glob.glob(\"x*\"))\n",
+    "path_list2 = [path.replace(\"x\", \"x=\") for path in path_list2_origin]\n",
     "\n",
     "# 温度比較\n",
     "path_list3 = []\n",
@@ -68,7 +71,8 @@
     "#首角度比較\n",
     "path_list6 = []\n",
     "for f in natsorted(glob.glob('x500/open_noses/cough/**/theta_*phi_*')):\n",
-    "    path_list6.append(os.path.split(f)[1])\n",
+    "    path_list6_origin = os.path.split(f)[1]\n",
+    "    path_list6.append(path_list6_origin.replace(\"theta_\", \"θ=\").replace(\"phi_\", \",φ=\"))\n",
     "\n",
     "#格子比較(感染者側の口周り格子)\n",
     "path_list7 = []\n",
@@ -85,12 +89,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_list1 = natsorted(glob.glob(\"**/open_noses/cough/t20/theta_0phi_-10/*.csv\"))\n",
-    "series_list = path_list2"
+    "path_list1 = natsorted(glob.glob(\"x500/open_noses/cough/t20/theta_*phi_*/*.csv\"))\n",
+    "series_list = path_list6"
    ]
   },
   {
@@ -102,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +260,24 @@
     "rich_text = RichText(p=[Paragraph(pPr=para_prop, endParaRPr=char_prop)])\n",
     "c1.legend.txPr = rich_text\n",
     "c1.x_axis.txPr = rich_text\n",
-    "c1.y_axis.txPr = rich_text"
+    "c1.y_axis.txPr = rich_text\n",
+    "\n",
+    "#Layout\n",
+    "c1.layout = Layout(ManualLayout(\n",
+    "    x = 0.05, \n",
+    "    y = 0.1, \n",
+    "    h = 0.8, \n",
+    "    w = 0.9, \n",
+    "    xMode=\"edge\", \n",
+    "    yMode=\"edge\"\n",
+    "    ))\n",
+    "c1.legend.layout = Layout(manualLayout = ManualLayout(\n",
+    "        x=-0.4,\n",
+    "        y=0,\n",
+    "        h=0.1,\n",
+    "        w=0.8,\n",
+    "        yMode=\"edge\"\n",
+    "    ))"
    ]
   },
   {
@@ -268,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +399,24 @@
     "rich_text = RichText(p=[Paragraph(pPr=para_prop, endParaRPr=char_prop)])\n",
     "c2.legend.txPr = rich_text\n",
     "c2.x_axis.txPr = rich_text\n",
-    "c2.y_axis.txPr = rich_text"
+    "c2.y_axis.txPr = rich_text\n",
+    "\n",
+    "#Layout\n",
+    "c2.layout = Layout(ManualLayout(\n",
+    "    x = 0.05, \n",
+    "    y = 0.1, \n",
+    "    h = 0.8, \n",
+    "    w = 0.9, \n",
+    "    xMode=\"edge\", \n",
+    "    yMode=\"edge\"\n",
+    "    ))\n",
+    "c2.legend.layout = Layout(manualLayout = ManualLayout(\n",
+    "        x=-0.4,\n",
+    "        y=0,\n",
+    "        h=0.1,\n",
+    "        w=0.8,\n",
+    "        yMode=\"edge\"\n",
+    "    ))"
    ]
   },
   {
@@ -390,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [
     {
@@ -428,14 +466,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta_0phi_-10_20241003.xlsx was generated.\n"
+      "x500_20241004.xlsx was generated.\n"
      ]
     }
    ],
@@ -466,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,15 +519,15 @@
     "chart2 = sheet.ChartObjects(2).Chart\n",
     "\n",
     "if series_list == path_list2:\n",
-    "    imagename_number = Read_file_path.parent.name + \"_\" + date_string + \"_number\" + \".png\"\n",
-    "    imagename_volume = Read_file_path.parent.name + \"_\" + date_string + \"_volume\" + \".png\"\n",
-    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/\" + imagename_number, \"PNG\")\n",
-    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/\" + imagename_volume, \"PNG\")\n",
+    "    imagename_number = Read_file_path.parent.name + \"_\" + date_string + \".png\"\n",
+    "    imagename_volume = Read_file_path.parent.name + \"_\" + date_string + \".png\"\n",
+    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/number/\" + imagename_number, \"PNG\")\n",
+    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/volume/\" + imagename_volume, \"PNG\")\n",
     "elif series_list == path_list6:\n",
-    "    imagename_number = Read_file_path.parts[0] + \"_\" + date_string + \"_number\" + \".png\"\n",
-    "    imagename_volume = Read_file_path.parts[0] + \"_\" + date_string + \"_volume\" + \".png\"\n",
-    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/\" + imagename_number, \"PNG\")\n",
-    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/\" + imagename_volume, \"PNG\")\n",
+    "    imagename_number = Read_file_path.parts[0] + \"_\" + date_string + \".png\"\n",
+    "    imagename_volume = Read_file_path.parts[0] + \"_\" + date_string + \".png\"\n",
+    "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/number/\" + imagename_number, \"PNG\")\n",
+    "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/volume/\" + imagename_volume, \"PNG\")\n",
     "\n",
     "workbook.Close(SaveChanges=False)\n",
     "excel.Quit()"
