--- a/boxCount2graph.ipynb
+++ b/boxCount2graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 692,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,8 @@
     "import os\n",
     "from pathlib import Path\n",
     "from datetime import datetime\n",
-    "import win32com.client"
+    "import win32com.client\n",
+    "import subprocess"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 693,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 694,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 695,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
     "    Data_c.loc[\"rightup\"] = Data_c.iloc[23:34,:].sum()\n",
     "    Data_c.loc[\"rightmid\"] = Data_c.iloc[34:38,:].sum()\n",
     "    Data_c.loc[\"rightlow\"] = Data_c.iloc[38:53,:].sum()\n",
-    "    Data_c.insert(loc = 0, column = 'ID', value = ID) \n",
+    "    Data_c.insert(loc = 0, column = 'ID', value = ID)\n",
     "    outputData = Data_c.iloc[53:58]\n",
     "\n",
     "    for i in dataframe_to_rows(outputData,index=None,header=True):\n",
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 696,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 697,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 698,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 699,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,18 +429,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 700,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "directory \"distance\" exists.\n",
-      "directory \"angle\" exists.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "directory_1 = 'result/distance'\n",
     "directory_2 = 'result/angle'\n",
@@ -466,17 +458,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 701,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x500_20241004.xlsx was generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ws.add_chart(c1, \"E22\")\n",
     "ws.add_chart(c2,\"N22\")\n",
@@ -504,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 702,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,6 +496,7 @@
     "excel.Visible = False\n",
     "\n",
     "filepath = r\"C:/Users/b1123/document/Lab/Program/droplets_simulation/BoxCount_ICCS2025/\" + str(resultfilepath)\n",
+    "directorypath = r\"C:/Users/b1123/document/Lab/Program/droplets_simulation/BoxCount_ICCS2025/\"\n",
     "workbook = excel.Workbooks.Open(filepath)\n",
     "sheet = workbook.Sheets(1)\n",
     "\n",
@@ -523,20 +508,39 @@
     "    imagename_volume = Read_file_path.parent.name + \"_\" + date_string + \".png\"\n",
     "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/number/\" + imagename_number, \"PNG\")\n",
     "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/volume/\" + imagename_volume, \"PNG\")\n",
+    "    figurepath = r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/distance/\"\n",
     "elif series_list == path_list6:\n",
     "    imagename_number = Read_file_path.parts[0] + \"_\" + date_string + \".png\"\n",
     "    imagename_volume = Read_file_path.parts[0] + \"_\" + date_string + \".png\"\n",
     "    chart1.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/number/\" + imagename_number, \"PNG\")\n",
     "    chart2.Export(r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/volume/\" + imagename_volume, \"PNG\")\n",
+    "    figurepath = r\"C:/Users/b1123/document/Lab/Data/droplets_count_ICCS/Graph/angle/\"\n",
     "\n",
     "workbook.Close(SaveChanges=False)\n",
     "excel.Quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "保存先ディレクトリを開く"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess.Popen(['start', directorypath], shell=True)\n",
+    "subprocess.Popen(['start', figurepath], shell=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
